# ModeMap

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  GOOGLE_PLACES_SETUP.md  README_ALEMBIC.md  pyproject.toml  requirements.txt  test_db_connection.py
backend/alembic/: README  env.py
backend/alembic/versions/: f99aa361bd09_initial_migration.py
backend/app/: config.py  main.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  user_event.py  venue.py
backend/app/providers/: __init__.py  google.py
backend/app/schemas/: __init__.py  venue.py
backend/tests/: conftest.py  test_database.py.skip  test_google_places.py  test_schemas.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Map.tsx
frontend/lib/: api.ts
